methods.basics.MethodsDogHouse.scala.code


setCouleurBrosse(Couleur.red)
baisseBrosse()
setCouleurBrosse(Couleur.red)
avance